gccida/c2/recog
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47944:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47950:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47953:30: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
switch ( ( unsigned __int128)x0[1] ) 
                             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47965:42: error: expected ')'
if ( v19 == 4 && register_operand( ( rtx)v18, SImode) ) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47965:34: note: to match this '('
if ( v19 == 4 && register_operand( ( rtx)v18, SImode) ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47967:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v18; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47967:33: error: expected ';' after expression
recog_data_0.operand[0] = ( rtx)v18; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47973:31: error: expected ')'
if ( !register_operand( ( rtx)v18, DImode) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47973:23: note: to match this '('
if ( !register_operand( ( rtx)v18, DImode) ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47975:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v18; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47975:33: error: expected ';' after expression
recog_data_0.operand[0] = ( rtx)v18; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:47988:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v21; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48007:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48008:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)x0[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48016:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48021:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)x0[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48025:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48026:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)x0[1].fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48038:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48042:43: error: expected ')'
if ( constant_call_address_operand( ( rtx)v13, VOIDmode) ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48042:35: note: to match this '('
if ( constant_call_address_operand( ( rtx)v13, VOIDmode) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/insn-recog.c:48044:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v13; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog/src/obj/insn-recog.o] Error 1
